--- a/homepage.css
+++ b/homepage.css
@@ -1,12 +1,19 @@
+body{
+  margin:0;
+  padding:0;
+}
+
+
 ul{
     display: flex;
     list-style-type: none;
     margin: 0;
     padding: 0;
     width:100%;
-    height: auto;
+    height: 60px;
     justify-content: end;
-    background-color: lightgray;
+    align-items: center;
+    background-color: white;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
 
     
@@ -36,11 +43,13 @@ li a:hover:not(.active) {
     padding:0;
     margin:0;
     width:100%;
-    height: 650px;
+    margin-bottom: 60px;
+    height: 750px;
     overflow: hidden;
   }
 
   img{
+    display: block;
     width:100%;
     height: 100%;
     object-fit: cover;
@@ -57,7 +66,7 @@ li a:hover:not(.active) {
 
   .intro{
     position: absolute;
-    top: 45px;
+    top: 70px;
     left: 16px;
     text-align: start;
     color: white;
@@ -66,12 +75,15 @@ li a:hover:not(.active) {
   }
 
   .section1{
-    position: absolute;
-    bottom: 0;
+    /* position: absolute; */
     width: 100%;
-    background-color: lightskyblue;
+    /*bottom: 0px;*/
+    margin-top: 40px;
+    background-color:  #e7f1ff;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
     padding: 20px;
-    display: flex; /* optional: make the inner divs line up horizontally */
+    margin-top: -40px;
+    display: flex; 
     justify-content: space-around;
     box-sizing: border-box; 
     
@@ -106,12 +118,13 @@ h3,p{
 
 .items{
     width:100%;
-    background-color: lightgray;
+    background-color: white;
     display: flex;
     justify-content: space-around;
     align-items: center;
     padding-top: 20px;
     height: 300px;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
 }
 
 .items div{
@@ -134,4 +147,75 @@ h3,p{
     height: 200px;
     padding-bottom: 20px;
     object-fit: cover;
+}
+
+/* footer styling */
+
+/* Footer */
+.footer {
+  background-color: #f5f9ff;   /* very light blue/white tone */
+  color: #0d6efd;             /* your website's primary blue */
+  width: 100%;
+  margin-top: 50px;
+  padding-top: 30px;
+  border-top: 4px solid #0d6efd;
+}
+
+.footer-container {
+  display: flex;
+  justify-content: space-around;
+  padding: 20px;
+  flex-wrap: wrap;
+}
+
+.footer-section {
+  width: 200px;
+  margin: 10px;
+}
+
+.footer-section h3,
+.footer-section h4 {
+  color: #0d6efd;
+  margin-bottom: 10px;
+}
+
+.footer-section p {
+  color: #333; /* dark grey, softer than black */
+}
+
+.footer-section ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.footer-section ul li {
+  margin: 6px 0;
+}
+
+.footer-section ul li a {
+  text-decoration: none;
+  color: #0d6efd;
+}
+
+.footer-section ul li a:hover {
+  text-decoration: underline;
+}
+
+.socials a {
+  display: inline-block;
+  margin-right: 10px;
+  text-decoration: none;
+  color: #0d6efd;
+}
+
+.socials a:hover {
+  text-decoration: underline;
+}
+
+.footer-bottom {
+  text-align: center;
+  padding: 15px 0;
+  background-color: #e7f1ff; /* subtle light blue */
+  font-size: 14px;
+  color: #0a58ca;            /* slightly darker blue text */
 }
